@@ -146,10 +146,10 @@ void lcd_puts_P(uint8_t x,uint8_t y,const prog_char * s)
 }
 void lcd_outhex4(uint8_t x,uint8_t y,uint16_t val)
 {
-  x+=FW; // was FWNUM*4;
+  x+=FW*4;
   for(int i=0; i<4; i++)
   {
-    x-=FW; // was FWNUM;
+    x-=FW;
     char c = val & 0xf;
     c = c>9 ? c+'A'-10 : c+'0';
     lcd_putc(x,y,c);
@@ -167,7 +167,7 @@ void lcd_outdezAtt(uint8_t x,uint8_t y,int16_t val,uint8_t mode)
 void lcd_outdezNAtt(uint8_t x,uint8_t y,int16_t val,uint8_t mode,uint8_t len)
 {
   uint8_t fw=FWNUM; //FW-1;
-  if(mode&DBLSIZE) fw+=fw;
+  if(mode&DBLSIZE) fw+=fw+1;
   uint8_t prec=PREC(mode);
   bool neg=val<0;
   if(neg) val=-val;
